[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Dialog Box/courbd.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/Command Box/9patchrect_command.png" type="Texture" id=2]
[ext_resource path="res://UI/Command Box/Command_Player.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 1 )

[node name="CommandBox" type="Control"]
margin_top = -16.0
margin_right = 168.0
margin_bottom = 17.0
rect_min_size = Vector2( 0, 33 )
script = ExtResource( 4 )

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 33 )
texture = ExtResource( 2 )
patch_margin_left = 5
patch_margin_top = 7
patch_margin_right = 5
patch_margin_bottom = 7

[node name="MarginContainer" type="MarginContainer" parent="NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 15.0
margin_top = 8.0
margin_right = -15.0
margin_bottom = -9.0
mouse_filter = 2
__meta__ = {
"_edit_group_": true
}

[node name="RichTextLabel" type="RichTextLabel" parent="NinePatchRect/MarginContainer"]
margin_right = 138.0
margin_bottom = 16.0
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "> YOU THERE. BOY."
text = "> YOU THERE. BOY."
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
